Introduce special handling for virtual threads